// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ToggleButtons/> with active 1`] = `
<div
  className="btn-group"
>
  <button
    className="btn btn-sm btn-default"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    a
  </button>
  <button
    className="btn btn-sm btn-primary"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    b
  </button>
</div>
`;

exports[`<ToggleButtons/> with className 1`] = `
<div
  className="btn-group testing-cls"
>
  <button
    className="btn btn-sm btn-default"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    a
  </button>
  <button
    className="btn btn-sm btn-default"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    b
  </button>
</div>
`;

exports[`<ToggleButtons/> without active 1`] = `
<div
  className="btn-group"
>
  <button
    className="btn btn-sm btn-default"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    a
  </button>
  <button
    className="btn btn-sm btn-default"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    b
  </button>
</div>
`;
